# describealign

./: README.md  describealaign.py  describealaign.spec  describealign.py  pyproject.toml
.github/workflows/: build-binary.yaml
Package/scripts/: postinstall
tests/: test_audio_cache.py  test_failure_diagnostics.py  test_passthrough.py  test_seam_crossfade.py
