[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "describealaign"
authors = [
  { name = "Julian Brown", email = "julbean@proton.me" },
  { name = "Matt Alvernaz" },
]
description = "Combines videos with matching audio files (e.g. audio descriptions). Fork of describealign with PAL/NTSC and seam-crossfade fixes."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: OS Independent",
]
dynamic = ["version", "dependencies"]

[tool.setuptools]
py-modules = ["describealaign"]

[tool.setuptools.dynamic]
version = { file = "version" }
dependencies = { file = "requirements.txt" }

[project.scripts]
describealaign = "describealaign:command_line_interface"

[project.urls]
"Homepage" = "https://github.com/matalvernaz/describealaign"
"Bug Tracker" = "https://github.com/matalvernaz/describealaign/issues"
"Upstream" = "https://github.com/julbean/describealign"
